# Sokoul

./: .env.example  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  CAHIER_DES_CHARGES.md  CHECKPOINT_PHASE_6_COMPLETE.md  CICD_IMPLEMENTATION.md  CI_CD_TEMPLATE.md  CLEAN_START.md  COMPLETION_SUMMARY.txt  Cargo.toml  DELETE_MIGRATIONS.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.prod  EXECUTIVE_REPORT.md  FINAL_RESET.sh  FINAL_STRATEGY.md  FIX_MIGRATION.txt  GEMINI.md  GITHUB_PUSH_GUIDE.md  METRICS_GUIDE.md  MIGRATIONS_NEUTRALIZED.md  OPTIMIZATIONS.md  PHASE_6_COMPLETION.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_FIX.md  QUICK_START.md  README.md  SOKOUL_v2_Architecture_Complete.md  START_CLEAN.sh  START_HERE.md  TESTING.md  TESTING_FRAMEWORK_SUMMARY.md  TEST_COMPLETION_REPORT.md  TEST_DOCS_VISUAL_MAP.md  TEST_DOCUMENTATION_INDEX.md  TEST_EXECUTION_GUIDE.md  TEST_IMPROVEMENTS_SUMMARY.md  TEST_README.md  (+21 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
dashboard/: package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
dashboard/src/: app.css
data/prowlarr/: config.xml  logs.db-wal  prowlarr.db-shm  prowlarr.db-wal
deployment/: DEPLOYMENT_SETUP_SUMMARY.md  INDEX.md  README.md
docs/: ARCHITECTURE.md  CAHIER_DES_CHARGES_LECTEUR_VIDEO.md  DEPLOYMENT.md  Prompt.md  QUICK_START.md  README.md  STREAMING.md  TESTING.md  Vidfast.md  autoembed-api.md  tmdb-api-reference.md  vidlink-api.md  vidsrc-embed-ru-api.md  vidsrc-to-api.md
docs/AUTOEMBED/: AUTOEMBED.md
docs/pages/: README.md  admin.md  collections.md  downloads.md  films.md  home.md  library.md  login.md  movie-detail.md  person.md  search.md  series.md  settings.md  tasks.md  tv-detail.md  tv-direct.md  watch.md
scripts/: release.sh
src/: auth_flow_tests.rs  cache.rs  chaos_engineering_tests.rs  client_tests.rs  config.rs  config_tests.rs  distributed_tracing_tests.rs  events.rs  github_actions_tests.rs  health_checks_tests.rs  input_sanitization_tests.rs  integration_tests_level1.rs  load_testing_tests.rs  main.rs  message_contract_tests.rs  metrics.rs  metrics_tests.rs  models.rs  nats_integration_tests.rs  performance_concurrency_tests.rs  precommit_hooks_tests.rs  prometheus_metrics_tests.rs  rate_limiting_tests.rs  release_automation_tests.rs  scheduler.rs  secrets_audit_tests.rs  security.rs  security_robustness_tests.rs  tests.rs  workers_idempotence_tests.rs
src/api/: auth.rs  collections.rs  downloads.rs  enrichment.rs  error.rs  files.rs  health.rs  library.rs  media.rs  media_ref.rs  metrics.rs  middleware.rs  mod.rs  recommendations.rs  search.rs  security.rs  storage.rs  streaming.rs  tasks.rs  tmdb.rs  tracking.rs  tv.rs  watch_history.rs  watchlist.rs  ws.rs
src/clients/: consumet.rs  fanart.rs  flaresolverr.rs  imdbbot.rs  jikan.rs  mod.rs  omdb.rs  simkl.rs  stream.rs  subtitles.rs  tastedive.rs  thetvdb.rs  tmdb.rs  trakt.rs  tv_channels.rs  tvmaze.rs  unogs.rs  urlhaus.rs  virustotal.rs  watchmode.rs
src/db/: collections.rs  favorites.rs  media.rs  media_files.rs  mod.rs  search_results.rs  security.rs  tasks.rs  tv.rs  users.rs  watch_history.rs  watchlist.rs
src/extractors/: autoembed.rs  embed_su.rs  french.rs  headless.rs  hosters.rs  mod.rs  moviesapi.rs  registry.rs  (+1 more)
tests/: README.md  common.rs  e2e_chaos_tests.rs  e2e_load_tests.rs  e2e_smoke_tests.rs
(+445 files in other folders)
