[package]
name = "sokoul"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal", "migrate"] }
redis = { version = "0.24", features = ["tokio-comp"] }
async-nats = "0.33"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
teloxide = { version = "0.12", features = ["macros"] }
librqbit = "8.1"
playwright = "0.0.20"
futures = "0.3"
once_cell = "1.19"
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors", "trace"] }
rust_decimal = "1.33"
sysinfo = "0.30"
async-trait = "0.1"
strsim = "0.11"
url = "2.5"
axum-prometheus = "0.6"
tower = { version = "0.4", features = ["util", "limit"] }
tokio-util = { version = "0.7", features = ["io"] }
jsonwebtoken = "9.3"
bcrypt = "0.15"
lettre = { version = "0.11.19", features = ["builder", "tokio1", "tokio1-native-tls", "smtp-transport"] }
lettre_email = "0.9.4"
prometheus = { version = "0.14.0", features = ["push", "protobuf"] }
lazy_static = "1.5.0"
zip = "0.6"
urlencoding = "2.1"
regex = "1.10"
async-stream = "0.3"

# Production release optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
regex = "1.10"
urlencoding = "2.1"
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1.36", features = ["full"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
